<resources>
    <string name="app_name">Oozed</string>
    <string name="title_activity_game" translatable="false">Game</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="game_over">Game Over!</string>
    <string name="your_score">Your Score: %1$d</string>
    <string name="new_highscore">New Highscore!</string>
    <string name="highscore">Highscore: %1$d</string>
    <string name="main_menu">Main Menu</string>
    <string name="retry">Retry</string>
    <string name="title_activity_lives" translatable="false">Lives Screen</string>
    <string name="level" translatable="false">Level %1$s</string>
    <string name="lives" translatable="false">x %1$d</string>
    <string name="start_game">Start Game!</string>
    <string name="tap_to_start">TAP to Start!</string>
    <string name="pause_screen_title">PAUSED</string>
    <string name="tap_to_jump">Tap to Jump!</string>
    <string name="swipe_to_dash">Swipe to Dash!</string>
    <string name="dash_and_jump">Dash + Jump</string>
    <string name="win_title">You Win!</string>
    <string name="continue_win">Continue</string>
    <string name="time">Time: %1$d:%2$02d</string>
</resources>