<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameOver">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/win_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_over"
            android:textAlignment="center"
            android:textAppearance="@style/Theme.MMUELM7.Heading" />

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_score"
            android:textAlignment="center"
            android:textAppearance="@style/Theme.MMUELM7.Heading2" />

        <TextView
            android:id="@+id/new_highscore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_highscore"
            android:textAlignment="center"
            android:textAppearance="@style/Theme.MMUELM7.Heading2" />

        <TextView
            android:id="@+id/highscore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/highscore"
            android:textAlignment="center"
            android:textAppearance="@style/Theme.MMUELM7.Heading2" />

        <LinearLayout
            android:id="@+id/game_over_button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/continue_button"
                style="@style/Widget.Theme.MMUELM7.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:onClick="onMainMenuButtonClicked"
                android:text="@string/main_menu" />

            <Space
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <Button
                android:id="@+id/retry_button"
                style="@style/Widget.Theme.MMUELM7.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:onClick="onRetryButtonClicked"
                android:text="@string/retry" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>