<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.MMUELM7.FullscreenContainer"
    tools:context=".LivesActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="@style/Widget.Theme.MMUELM7.ButtonBar.Fullscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/levelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/level"
            android:textAppearance="@style/Theme.MMUELM7.Heading2" />

        <TextView
            android:id="@+id/livesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ooze"
            android:text="@string/lives"
            android:textAppearance="@style/Theme.MMUELM7.Heading2" />

        <Space
            android:layout_width="75dp"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_start"
            android:textAppearance="@style/Theme.MMUELM7.Heading2" />
    </LinearLayout>

</FrameLayout>