<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F3F74"
    android:theme="@style/ThemeOverlay.MMUELM7.FullscreenContainer"
    tools:context=".WinActivity">

    <ImageView
        android:id="@+id/win_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/win_ooze"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:srcCompat="@drawable/ooze_single" />

    <ImageView
        android:id="@+id/win_prof"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:srcCompat="@drawable/prof" />

    <ImageView
        android:id="@+id/win_smoke"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="@id/win_background"
        app:layout_constraintEnd_toEndOf="@id/win_background"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/win_background"
        app:layout_constraintTop_toTopOf="@id/win_background"
        app:layout_constraintVertical_bias="1"
        app:srcCompat="@drawable/smoke" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/win_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/win_title"
            android:textAlignment="center"
            android:textAppearance="@style/Theme.MMUELM7.Heading" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textAlignment="center"
            android:textAppearance="@style/Theme.MMUELM7.Heading2" />

        <Button
            android:id="@+id/continue_button"
            style="@style/Widget.Theme.MMUELM7.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:onClick="onContinueButtonClicked"
            android:text="@string/continue_win" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>